# Drawlingo

./: .gitignore  API_DEBUG_GUIDE.md  CMakeLists.txt  DrawingCanvas.py  MainWindow.py  QUICK_START.md  README.md  README_PYTHON.md  SETUP_CN.md  SETUP_EN.md  SketchAnalyzer.py  TROUBLESHOOTING.md  VocabularyAnalyzer.py  activate_env.bat  activate_env.ps1  main.py  requirements.txt  run.bat  run.sh
